--- a/Lessons/P0341_SimpleSQLite/local.properties
+++ b/Lessons/P0341_SimpleSQLite/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 03 11:14:38 MSK 2018
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Tue Sep 04 21:26:57 MSK 2018
+ndk.dir=/opt/android-sdk-update-manager/ndk-bundle
+sdk.dir=/opt/android-sdk-update-manager
