--- a/audio-analyzer-for-android/audioSpectrumAnalyzer/build.gradle
+++ b/audio-analyzer-for-android/audioSpectrumAnalyzer/build.gradle
@@ -1,17 +1,23 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "github.bewantbe.audio_analyzer_for_android"
-        minSdkVersion 22
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion 27
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            // See https://developer.android.com/studio/build/shrink-code.html
+            // Remember to check <module-name>/build/outputs/mapping/release/
+            //   usage.txt   : code that was removed
+            //   mapping.txt : the translation between the original and obfuscated class, method, and field names
+            shrinkResources true
+            minifyEnabled true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.txt'
         }
     }
     productFlavors {
@@ -19,7 +25,7 @@ android {
 }
 
 dependencies {
-    compile project(':FFTLibrary')
-    compile 'com.android.support:support-v4:25.3.0'
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    implementation project(':FFTLibrary')
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
 }
