--- a/audio-analyzer-for-android/audioSpectrumAnalyzer/src/main/AndroidManifest.xml
+++ b/audio-analyzer-for-android/audioSpectrumAnalyzer/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="github.bewantbe.audio_analyzer_for_android"
-    android:versionCode="20170420"
+    android:versionCode="20180114"
     android:versionName="1.7.0alpha"
     android:installLocation="auto">
 
