--- a/Android-ReactiveLocation/android-reactive-location/build.gradle
+++ b/Android-ReactiveLocation/android-reactive-location/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 14
@@ -19,9 +19,9 @@ android {
 //TODO: local maven deployment
 
 dependencies {
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.5'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
 }
 
 // Comment this to deploy to local maven repository
