--- a/Android-ReactiveLocation/sample/build.gradle
+++ b/Android-ReactiveLocation/sample/build.gradle
@@ -35,8 +35,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
-    compile project(':android-reactive-location')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
+    implementation project(':android-reactive-location')
 }
