--- a/NetGuard/app/build.gradle
+++ b/NetGuard/app/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'com.android.model.application'
 
 model {
     android {
-        compileSdkVersion = 26
-        buildToolsVersion = "26.0.1"
+        compileSdkVersion = 28
 
         defaultConfig {
             applicationId = "eu.faircode.netguard"
@@ -84,8 +83,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // https://developer.android.com/topic/libraries/support-library/revisions.html
-    compile 'com.android.support:appcompat-v7:26.1.+'
-    compile 'com.android.support:recyclerview-v7:26.1.+'
+    compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'com.android.support:recyclerview-v7:28.0.0'
 
     // https://developers.google.com/android/guides/setup
     compile 'com.google.android.gms:play-services-base:11.4.+'
