--- a/NetGuard/app/build.gradle
+++ b/NetGuard/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.model.application'
 
 model {
     android {
+        buildToolsVersion "28.0.0"
         compileSdkVersion = 28
 
         defaultConfig {
@@ -56,14 +57,14 @@ model {
             create("all") {
                 versionName = "2.138"
                 minSdkVersion.apiLevel = 14
-                targetSdkVersion.apiLevel = 26
+                targetSdkVersion.apiLevel = 28
                 versionCode = 2017092801
                 archivesBaseName = "NetGuard-v$versionName"
             }
             create("lollipop-and-later") {
                 versionName = "2.138"
                 minSdkVersion.apiLevel = 20
-                targetSdkVersion.apiLevel = 26
+                targetSdkVersion.apiLevel = 28
                 versionCode = 2017092811
                 archivesBaseName = "NetGuard-v$versionName"
             }
@@ -71,7 +72,7 @@ model {
                 versionName = "2.138"
                 minSdkVersion.apiLevel = 14
                 maxSdkVersion = 19
-                targetSdkVersion.apiLevel = 26
+                targetSdkVersion.apiLevel = 28
                 versionCode = 2017092821
                 archivesBaseName = "NetGuard-v$versionName"
             }
