--- a/AR/augmented-reality-example/app/build.gradle
+++ b/AR/augmented-reality-example/app/build.gradle
@@ -1,25 +1,23 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '25.0.0'
-
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.lycha.example.augmentedreality"
-        minSdkVersion 18
-        targetSdkVersion 22
+        minSdkVersion 22
+        targetSdkVersion 28
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.google.android.gms:play-services:8.1.0'
-
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
