--- a/AR/augmented-reality-example/build.gradle
+++ b/AR/augmented-reality-example/build.gradle
@@ -2,14 +2,21 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath "com.google.gms:google-services:3.1.2"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
+
+        google()
     }
 }
