--- a/_NeuroSky_SDK/neurosky-android-sdk/app-java/build.gradle
+++ b/_NeuroSky_SDK/neurosky-android-sdk/app-java/build.gradle
@@ -1,34 +1,33 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
-  buildToolsVersion '28.0.2'
-
-  defaultConfig {
-    applicationId "com.github.pwittchen.neurosky.app"
-    minSdkVersion rootProject.ext.minSdkVersion
-    targetSdkVersion rootProject.ext.compileSdkVersion
-    versionCode 1
-    versionName "1.0"
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
+    defaultConfig {
+        applicationId "com.github.pwittchen.neurosky.app"
+        minSdkVersion 17
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
     }
-  }
-
-  compileOptions {
-    targetCompatibility 1.8
-    sourceCompatibility 1.8
-  }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
+    productFlavors {
+    }
 }
 
 dependencies {
-  implementation project(':library')
-  implementation deps.appcompatv7
-  implementation deps.constraintlayout
-  implementation deps.butterknife
-  annotationProcessor deps.butterknifecompiler
+    implementation project(':library')
+    implementation deps.appcompatv7
+    implementation deps.constraintlayout
+    implementation deps.butterknife
+    annotationProcessor deps.butterknifecompiler
 }
