--- a/0/Android-VideoTube/app/src/main/AndroidManifest.xml
+++ b/0/Android-VideoTube/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.echessa.videotube"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.echessa.videotube">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
