--- a/PigeonMessanger/app/build.gradle
+++ b/PigeonMessanger/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.jpardogo.materialtabstrip:library:1.0.6'
+    implementation 'com.android.support:support-core-utils:28.0.0'
 }
