--- a/Qt_Android/app/build.gradle
+++ b/Qt_Android/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.android.support:appcompat-v7:29+'
     implementation files('src/main/qt_output/android-build/libs/QtAndroid-bundled.jar')
     implementation files('src/main/qt_output/android-build/libs/QtAndroidAccessibility-bundled.jar')
 }
