--- a/MPAndroidChart/MPChartLib/build.gradle
+++ b/MPAndroidChart/MPChartLib/build.gradle
@@ -4,12 +4,19 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.philjay'
 
 android {
+    signingConfigs {
+        debug {
+            storePassword 'q12345'
+            keyPassword 'q12345'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 3
         versionName '3.1.0'
+        signingConfig signingConfigs.debug
     }
     buildTypes {
         release {
@@ -23,8 +30,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.annotation:annotation:1.0.1'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    testImplementation 'junit:junit:4.13'
 }
 
 task sourcesJar(type: Jar) {
